# cookiecutter-django

./: cookiecutter.json  setup.py
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pylintrc  Dockerfile  Pipfile  README.rst  entrypoint  migrator  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.envs/.production/: .django
{{cookiecutter.project_slug}}/config/: api_router.py  urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  production.py  test.py
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt  production.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: adapters.py  apps.py  models.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/api/: serializers.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/tests/: factories.py  test_drf_views.py  test_forms.py  test_views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: storages.py
