[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = []

readme = 'README.rst'  # Markdown files are supported

repository = "__NOTSET__"
homepage = "__NOTSET__"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"  # Compatible python versions must be declared here
toml = "^0.10"

pytz = { version = "2020.1" } # https://github.com/stub42/pytz
python-slugify = { version = "4.0.1" } # https://github.com/un33k/python-slugify
Pillow = { version = "7.2.0" } # https://github.com/python-pillow/Pillow
argon2-cffi = { version = "20.1.0" } # https://github.com/hynek/argon2_cffi
redis = { version = "3.5.3" } # https://github.com/andymccurdy/redis-py

# Django
# ------------------------------------------------------------------------------
django = { version = "3.0.9 }  # pyup: < 3.1" } # https://www.djangoproject.com/
django-environ = { version = "0.4.5" } # https://github.com/joke2k/django-environ
django-model-utils = { version = "4.0.0" } # https://github.com/jazzband/django-model-utils
django-allauth = { version = "0.42.0" } # https://github.com/pennersr/django-allauth
django-crispy-forms = { version = "1.9.2" } # https://github.com/django-crispy-forms/django-crispy-forms
django-redis = { version = "4.12.1" } # https://github.com/jazzband/django-redis

# Django REST Framework
djangorestframework = { version = "3.11.1" } # https://github.com/encode/django-rest-framework
django-cors-headers = { version = "3.4.0" } # https://github.com/adamchainz/django-cors-headers
django-filter = { version = "2.3.0" } # https://github.com/carltongibson/django-filter

Werkzeug = { version = "1.0.1" } # https://github.com/pallets/werkzeug
ipdb = { version = "0.13.3" } # https://github.com/gotcha/ipdb

# Django
# ------------------------------------------------------------------------------
factory-boy = { version = "3.0.1" } # https://github.com/FactoryBoy/factory_boy

django-debug-toolbar = { version = "2.2" } # https://github.com/jazzband/django-debug-toolbar
django-extensions = { version = "3.0.5" } # https://github.com/django-extensions/django-extensions
django-coverage-plugin = { version = "1.8.0" } # https://github.com/nedbat/django_coverage_plugin
pytest-django = { version = "3.9.0" } # https://github.com/pytest-dev/pytest-django

gunicorn = { version = "20.0.4" }  # https://github.com/benoitc/gunicorn
psycopg2 = { version = "2.8.5", extras = "--no-binary psycopg2" }  # https://github.com/psycopg/psycopg2

# Django
# ------------------------------------------------------------------------------
django-storages = { version = "1.9.1", extras = ["boto3"] }

# New Relic
newrelic = { version = "5.16.1.146" } # https://github.com/newrelic/newrelic-python-agent


[tool.poetry.dev-dependencies]
# Testing
# ------------------------------------------------------------------------------
mypy = { version = "0.770" } # https://github.com/python/mypy
django-stubs = { version = "1.5.0" } # https://github.com/typeddjango/django-stubs
pytest = { version = "6.0.1" } # https://github.com/pytest-dev/pytest
pytest-sugar = { version = "0.9.4" } # https://github.com/Frozenball/pytest-sugar

# Code quality
# ------------------------------------------------------------------------------
flake8 = { version = "3.8.3" } # https://github.com/PyCQA/flake8
flake8-isort = { version = "4.0.0" } # https://github.com/gforcada/flake8-isort
coverage = { version = "5.2.1" } # https://github.com/nedbat/coveragepy
black = { version = "19.10b0" } # https://github.com/ambv/black
pylint-django = { version = "2.3.0" } # https://github.com/PyCQA/pylint-django
pre-commit = { version = "2.6.0" } # https://github.com/pre-commit/pre-commit
